Validate form text input fields
Most text input fields are no longer accepting html tags and char &.

--- a/templates/contacts/contactfield_managefields.haml
+++ b/templates/contacts/contactfield_managefields.haml
@@ -144,6 +144,11 @@
       width: 280px;
     }
 
+    #field-table td.field-label .error {
+      width: 280px;
+      border: 0px;
+    }
+
     #field-table td.field-type {
       width: 160px;
       vertical-align: top;
