Display flow version we can import on the import page and the current flow export version on the flow editor

--- a/static/less/flow_editor.less
+++ b/static/less/flow_editor.less
@@ -1815,6 +1815,15 @@
   }
 }
 
+// Flow export version display
+#flow-export-version {
+  display: inline;
+    padding: 5px 8px;
+    background: #bbb;
+    font-size: 12px;
+    float: right;
+}
+
 // Flow saving status
 #status {
   position: absolute;
