--- a/templates/flows/flow_editor.haml
+++ b/templates/flows/flow_editor.haml
@@ -176,6 +176,9 @@
         -trans "drag"
       -trans "the red box."
 
+  #flow-export-version
+    v{{flow_export_version}}
+
   #status{ng-cloak:''}
     .throbber{ng-show:'saving'}
       %img{ src: "{{ STATIC_URL }}images/loader-bars.gif" }
