--- a/templates/campaigns/campaign_read.haml
+++ b/templates/campaigns/campaign_read.haml
@@ -2,6 +2,9 @@
 -load smartmin sms temba compress humanize i18n
 -block page-title
   {{object.name}}
+  {% if object.is_archived %}
+    -trans "(Archived)"
+  {% endif %}
 
 -block title-icon
   .title-icon
@@ -11,6 +14,9 @@
   .title-text
     %h1
       {{title}}
+      {% if object.is_archived %}
+      -trans "(Archived)"
+      {% endif %}
     %h5
       .icon-users-2
       -if object.group.is_active
